[package]
name = "read"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ledger-canister = { git="https://github.com/flyq/ic" }
dfn_core = { git="https://github.com/flyq/ic" }
dfn_protobuf = { git="https://github.com/flyq/ic" }
ic-types = { git="https://github.com/flyq/ic" }
candid = "0.7.4"
lazy_static = "1.4.0"
ic-cdk-macros = "0.3.1"
ic-cdk = "0.3.1"